Changed margin to padding to fix overlap issue

--- a/src/components/BookSmarts/BookSmarts.module.scss
+++ b/src/components/BookSmarts/BookSmarts.module.scss
@@ -12,5 +12,5 @@
     width: 100%;
     margin: auto;
     padding-top: 0px;
-    margin-bottom: 120px;
+    padding-bottom: 80px;
 }
